# RT

./: .gitignore  Makefile  RT  RTv1  author  change.sh  kernel.cl  rt  test.txt
Ferrary_metod/: CMakeLists.txt  main.c
ftvector/: Makefile
ftvector/includes/: ftvector.h
ftvector/source/: vec_cross.c  vec_dot.c  vec_len.c  vec_norm.c  vec_rot_x.c  vec_rot_xyz.c  vec_rot_y.c  vec_rot_z.c  vec_scale.c  vec_sub.c  vec_sum.c
gdb1/: config.cache  config.h  config.status  init.l-tmp
gdb1/.deps/: ada-exp.Po  ada-lang.Po  ada-tasks.Po  ada-typeprint.Po  ada-valprint.Po  ada-varobj.Po  addrmap.Po  agent.Po  amd64-darwin-tdep.Po  amd64-nat.Po  amd64-tdep.Po  annotate.Po  arch-utils.Po  auto-load.Po  auxv.Po  ax-gdb.Po  ax-general.Po  bcache.Po  bfd-target.Po  block.Po  blockframe.Po  break-catch-sig.Po  break-catch-syscall.Po  break-catch-throw.Po  breakpoint.Po  btrace.Po  build-id.Po  buildsym-legacy.Po  buildsym.Po  c-exp.Po  c-lang.Po  c-typeprint.Po  c-valprint.Po  c-varobj.Po  charset.Po  cli-out.Po  coff-pe-read.Po  coffread.Po  complaints.Po  completer.Po  (+190 more)
gdb1/testsuite/: config.status
includes/: pars_obj.h  rt.h  rtv1.h
libft/: Makefile
libft/includes/: libft.h
libft/source/: ft_atof.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_detect_space.c  ft_has_prefix.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isdigit_base.c  ft_islowcase.c  ft_isnumber.c  ft_isprint.c  ft_isupcase.c  ft_itoa.c  ft_linelen.c  ft_lst_pushback.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_memset_int.c  ft_percent.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  (+36 more)
new_parser/: CMakeLists.txt  Makefile  RT
new_parser/RT.dSYM/Contents/Resources/DWARF/: RT
new_parser/file_obj/: chinese_coin.mtl
new_parser/ftvector/source/: vec_dot.c  vec_sum.c
new_parser/includes/: rt.h
new_parser/libft/: Makefile
new_parser/libft/includes/: libft.h
new_parser/libft/source/: ft_atoi_base.c  ft_bzero.c  ft_detect_space.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit_base.c  ft_islowcase.c  ft_isnumber.c  ft_isprint.c  ft_itoa.c  ft_linelen.c  ft_lst_pushback.c  ft_lstdelone.c  ft_memalloc.c  ft_memccpy.c  ft_memcpy.c  ft_memmove.c  ft_percent.c  ft_pow.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_strcat.c  ft_strclr.c  ft_strdel.c  ft_strequ.c  ft_striteri.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncpy.c  ft_strndup.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsub.c  ft_tolower.c  projection_point_to_line.c
new_parser/scene/: ambiant.rt
new_parser/source/: main.c  scene_parser.c  take_funtion.c  work_with_list.c
new_parser/source/parser/: cheker.c  light_parser.c  object_parser.c  work_with_list.c
objs/: shrek_t.mtl
scene/: cone.rt  cylinder.rt  n_ambiant.rt  n_cone.rt  n_cone_text.rt  n_cylinder.rt  n_cylinder_text.rt  n_disc.rt  n_obj_1.rt  n_obj_2.rt  n_obj_3.rt  n_obj_cube.rt  n_obj_test.rt  n_paraboloid.rt  n_plane.rt  n_plane_text.rt  n_refraction.rt  n_scene_1.rt  n_scene_2.rt  n_scene_4.rt  n_scene_5.rt  n_scene_6.rt  n_scene_7.rt  n_scene_basic.rt  n_sphere.rt  n_sphere_text.rt  n_torus.rt  plane.rt  scene1.rt  scene2.rt  scene4.rt  scene5.rt  scene6.rt  scene7.rt  sphere.rt
source/: additional_function.c  additional_function_1.c  check_object.c  check_objs.c  cl.c  cl1.c  error_function.c  intersection.c  key_for_cam.c  key_for_object.c  key_for_other.c  light.c  load_texture.c  main.c  menu.c  mouse.c  object_parser.c  parse_obj.c  printf_data.c  scene_parser.c  string_parser.c  transform.c
source/events/: event.c  key_for_cam.c  key_for_object.c  key_for_other.c  mouse.c
source/gui/: auxiliary.c  menu.c  (+3 more)
(+155 files in other folders)
