cmake_minimum_required(VERSION 3.15)
project(new_parser C)

set(CMAKE_C_STANDARD 11)

include_directories(ftvector/includes)
include_directories(includes)
include_directories(libft/includes)

add_executable(new_parser
        ftvector/includes/ftvector.h
        ftvector/source/vec_cross.c
        ftvector/source/vec_dot.c
        ftvector/source/vec_len.c
        ftvector/source/vec_norm.c
        ftvector/source/vec_rot_x.c
        ftvector/source/vec_rot_xyz.c
        ftvector/source/vec_rot_y.c
        ftvector/source/vec_rot_z.c
        ftvector/source/vec_scale.c
        ftvector/source/vec_sub.c
        ftvector/source/vec_sum.c
        includes/rt.h
        libft/includes/libft.h
        libft/source/ft_atoi.c
        libft/source/ft_atof.c
        libft/source/ft_memset_int.c
        libft/source/ft_atoi_base.c
        libft/source/ft_bzero.c
        libft/source/ft_detect_space.c
        libft/source/ft_has_prefix.c
        libft/source/ft_isalnum.c
        libft/source/ft_isalpha.c
        libft/source/ft_isascii.c
        libft/source/ft_isdigit.c
        libft/source/ft_isdigit_base.c
        libft/source/ft_islowcase.c
        libft/source/ft_isnumber.c
        libft/source/ft_isprint.c
        libft/source/ft_isupcase.c
        libft/source/ft_itoa.c
        libft/source/ft_linelen.c
        libft/source/ft_lst_pushback.c
        libft/source/ft_lstadd.c
        libft/source/ft_lstdel.c
        libft/source/ft_lstdelone.c
        libft/source/ft_lstiter.c
        libft/source/ft_lstmap.c
        libft/source/ft_lstnew.c
        libft/source/ft_memalloc.c
        libft/source/ft_memccpy.c
        libft/source/ft_memchr.c
        libft/source/ft_memcmp.c
        libft/source/ft_memcpy.c
        libft/source/ft_memdel.c
        libft/source/ft_memmove.c
        libft/source/ft_memset.c
        libft/source/ft_percent.c
        libft/source/ft_pow.c
        libft/source/ft_putchar.c
        libft/source/ft_putchar_fd.c
        libft/source/ft_putendl.c
        libft/source/ft_putendl_fd.c
        libft/source/ft_putnbr.c
        libft/source/ft_putnbr_fd.c
        libft/source/ft_putstr.c
        libft/source/ft_putstr_fd.c
        libft/source/ft_space_swap.c
        libft/source/ft_strcat.c
        libft/source/ft_strchr.c
        libft/source/ft_strclr.c
        libft/source/ft_strcmp.c
        libft/source/ft_strcpy.c
        libft/source/ft_strdel.c
        libft/source/ft_strdup.c
        libft/source/ft_strequ.c
        libft/source/ft_striter.c
        libft/source/ft_striteri.c
        libft/source/ft_strjoin.c
        libft/source/ft_strjoin_del.c
        libft/source/ft_strlcat.c
        libft/source/ft_strlen.c
        libft/source/ft_strmap.c
        libft/source/ft_strmapi.c
        libft/source/ft_strncat.c
        libft/source/ft_strncmp.c
        libft/source/ft_strncpy.c
        libft/source/ft_strndup.c
        libft/source/ft_strnequ.c
        libft/source/ft_strnew.c
        libft/source/ft_strnstr.c
        libft/source/ft_strrchr.c
        libft/source/ft_strsplit.c
        libft/source/ft_strstr.c
        libft/source/ft_strsub.c
        libft/source/ft_strtrim.c
        libft/source/ft_tolower.c
        libft/source/ft_toupper.c
        libft/source/get_next_line.c
        libft/source/projection_point_to_line.c
        source/main.c
        source/parser/scene_parser.c
        source/parser/take_funtion.c
        source/parser/xml_tag.c
        source/parser/work_with_list.c
        source/parser/camera_parser.c
        source/parser/light_parser.c
        source/parser/object_parser.c
        source/parser/cheker.c
        source/parser/list_to_mas.c
        )
